fixed overlapping of nav in my profile

--- a/src/styles/ProfileManagement.module.scss
+++ b/src/styles/ProfileManagement.module.scss
@@ -54,7 +54,7 @@
 
 .navPosition{
   position: sticky;
-  top:61px;
+  top:74px;
 }
 
 .errorPassview {
